@@ -243,7 +243,7 @@
  }
 }
 
-.vue-splitter .splitter {
+.lms-splitter .splitter {
  max-width:0px!important;
 }
 
