@@ -1,1 +1,0 @@
-!function(e,t){"object"==typeof exports&&"object"==typeof module?module.exports=t():"function"==typeof define&&define.amd?define([],t):"object"==typeof exports?exports.VueSplitter=t():e.VueSplitter=t()}(this,function(){return function(e){function t(r){if(n[r])return n[r].exports;var o=n[r]={i:r,l:!1,exports:{}};return e[r].call(o.exports,o,o.exports,t),o.l=!0,o.exports}var n={};return t.m=e,t.c=n,t.i=function(e){return e},t.d=function(e,n,r){t.o(e,n)||Object.defineProperty(e,n,{configurable:!1,enumerable:!0,get:r})},t.n=function(e){var n=e&&e.__esModule?function(){return e.default}:function(){return e};return t.d(n,"a",n),n},t.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},t.p="",t(t.s=7)}([function(e,t,n){"use strict";Object.defineProperty(t,"__esModule",{value:!0}),t.default=void 0;var r={props:{margin:{type:Number,default:10},percent:{type:Number,default:50},horizontal:{type:Boolean,default:!1}},data:function(){return{active:!1,percent:50,hasMoved:!1}},computed:{flexDirection:function(){return this.horizontal?"column":"row"},splitterStyle:function(){return this.horizontal?{height:"3px",cursor:"ns-resize"}:{width:"3px",cursor:"ew-resize"}},leftPaneStyle:function(){return this.horizontal?{height:this.percent+"%"}:{width:this.percent+"%"}},rightPaneStyle:function(){return this.horizontal?{height:100-this.percent+"%"}:{width:100-this.percent+"%"}},userSelect:function(){return this.active?"none":""},cursor:function(){return this.active?this.horizontal?"ns-resize":"ew-resize":""}},methods:{onDown:function(e){this.active=!0,this.hasMoved=!1},onUp:function(){this.active=!1},onMove:function(e){var t=0,n=e.currentTarget,r=0;if(this.active){if(this.horizontal){for(;n;)t+=n.offsetTop,n=n.offsetParent;r=Math.floor(((undefined==e.pageY?e.touches[0].pageY:e.pageY)-t)/e.currentTarget.offsetHeight*1e4)/100}else{for(;n;)t+=n.offsetLeft,n=n.offsetParent;r=Math.floor(((undefined==e.pageX?e.touches[0].pageX:e.pageX)-t)/e.currentTarget.offsetWidth*1e4)/100}r>this.margin&&r<100-this.margin&&(this.percent=r),this.$emit("resize", this.percent),this.hasMoved=!0}},onMouseMove:function(e){0!==e.buttons&&0!==e.which||(this.active=!1),this.onMove(e)}}};t.default=r},function(e,t){e.exports=function(e,t,n,r){var o,i=e=e||{},s=typeof e.default;"object"!==s&&"function"!==s||(o=e,i=e.default);var a="function"==typeof i?i.options:i;if(t&&(a.render=t.render,a.staticRenderFns=t.staticRenderFns),n&&(a._scopeId=n),r){var u=Object.create(a.computed||null);Object.keys(r).forEach(function(e){var t=r[e];u[e]=function(){return t}}),a.computed=u}return{esModule:o,exports:i,options:a}}},function(e,t){e.exports={render:function(){var e=this,t=e.$createElement,n=e._self._c||t;return n("div",{staticClass:"vue-splitter",style:{cursor:e.cursor,userSelect:e.userSelect,flexDirection:e.flexDirection},on:{mouseup:e.onUp,mousemove:e.onMouseMove,touchmove:e.onMove,touchend:e.onUp}},[n("div",{staticClass:"left-pane splitter-pane",style:e.leftPaneStyle},[e._t("left-pane")],2),e._v(" "),n("div",{staticClass:"splitter",class:{active:e.active},style:e.splitterStyle,on:{mousedown:e.onDown,touchstart:function(t){return t.preventDefault(),e.onDown(t)}}}),e._v(" "),n("div",{staticClass:"right-pane splitter-pane",style:e.rightPaneStyle},[e._t("right-pane")],2)])},staticRenderFns:[]}},function(e,t,n){var r=n(6);"string"==typeof r&&(r=[[e.i,r,""]]),r.locals&&(e.exports=r.locals);n(8)("7dc44f42",r,!0)},function(e,t,n){"use strict";e.exports=function(){var e=[];return e.toString=function(){for(var e=[],t=0;t<this.length;t++){var n=this[t];n[2]?e.push("@media "+n[2]+"{"+n[1]+"}"):e.push(n[1])}return e.join("")},e.i=function(t,n){"string"==typeof t&&(t=[[null,t,""]]);for(var r={},o=0;o<this.length;o++){var i=this[o][0];"number"==typeof i&&(r[i]=!0)}for(o=0;o<t.length;o++){var s=t[o];"number"==typeof s[0]&&r[s[0]]||(n&&!s[2]?s[2]=n:n&&(s[2]="("+s[2]+") and ("+n+")"),e.push(s))}},e}},function(e,t,n){"use strict";e.exports=function(e,t){for(var n=[],r={},o=0;o<t.length;o++){var i=t[o],s=i[0],a=i[1],u=i[2],c=i[3],f={id:e+":"+o,css:a,media:u,sourceMap:c};r[s]?r[s].parts.push(f):n.push(r[s]={id:s,parts:[f]})}return n}},function(e,t,n){t=e.exports=n(4)(),t.push([e.i,".vue-splitter{height:inherit;display:flex}.vue-splitter .splitter-pane{height:inherit;overflow-y:auto}.vue-splitter .splitter{background-color:#9e9e9e}",""])},function(e,t,n){n(3);var r=n(1)(n(0),n(2),null,null);e.exports=r.exports},function(e,t,n){function r(e){for(var t=0;t<e.length;t++){var n=e[t],r=f[n.id];if(r){r.refs++;for(var o=0;o<r.parts.length;o++)r.parts[o](n.parts[o]);for(;o<n.parts.length;o++)r.parts.push(i(n.parts[o]));r.parts.length>n.parts.length&&(r.parts.length=n.parts.length)}else{for(var s=[],o=0;o<n.parts.length;o++)s.push(i(n.parts[o]));f[n.id]={id:n.id,refs:1,parts:s}}}}function o(){var e=document.createElement("style");return e.type="text/css",l.appendChild(e),e}function i(e){var t,n,r=document.querySelector('style[data-vue-ssr-id~="'+e.id+'"]');if(r){if(d)return v;r.parentNode.removeChild(r)}if(g){var i=h++;r=p||(p=o()),t=s.bind(null,r,i,!1),n=s.bind(null,r,i,!0)}else r=o(),t=a.bind(null,r),n=function(){r.parentNode.removeChild(r)};return t(e),function(r){if(r){if(r.css===e.css&&r.media===e.media&&r.sourceMap===e.sourceMap)return;t(e=r)}else n()}}function s(e,t,n,r){var o=n?"":r.css;if(e.styleSheet)e.styleSheet.cssText=m(t,o);else{var i=document.createTextNode(o),s=e.childNodes;s[t]&&e.removeChild(s[t]),s.length?e.insertBefore(i,s[t]):e.appendChild(i)}}function a(e,t){var n=t.css,r=t.media,o=t.sourceMap;if(r&&e.setAttribute("media",r),o&&(n+="\n/*# sourceURL="+o.sources[0]+" */",n+="\n/*# sourceMappingURL=data:application/json;base64,"+btoa(unescape(encodeURIComponent(JSON.stringify(o))))+" */"),e.styleSheet)e.styleSheet.cssText=n;else{for(;e.firstChild;)e.removeChild(e.firstChild);e.appendChild(document.createTextNode(n))}}var u="undefined"!=typeof document;if("undefined"!=typeof DEBUG&&DEBUG&&!u)throw new Error("vue-style-loader cannot be used in a non-browser environment. Use { target: 'node' } in your Webpack config to indicate a server-rendering environment.");var c=n(5),f={},l=u&&(document.head||document.getElementsByTagName("head")[0]),p=null,h=0,d=!1,v=function(){},g="undefined"!=typeof navigator&&/msie [6-9]\b/.test(navigator.userAgent.toLowerCase());e.exports=function(e,t,n){d=n;var o=c(e,t);return r(o),function(t){for(var n=[],i=0;i<o.length;i++){var s=o[i],a=f[s.id];a.refs--,n.push(a)}t?(o=c(e,t),r(o)):o=[];for(var i=0;i<n.length;i++){var a=n[i];if(0===a.refs){for(var u=0;u<a.parts.length;u++)a.parts[u]();delete f[a.id]}}}};var m=function(){var e=[];return function(t,n){return e[t]=n,e.filter(Boolean).join("\n")}}()}])});
