@@ -4,6 +4,7 @@
 2. Increase clickable/dragable size of desktop splitter to 12 px.
 3. Fix broken revert of Podcast search.
 4. Fix clock position.
+5. Re-implement splitter to (hopefully) work-around issues.
 
 2.5.1
 -----
